<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:labelFor="@id/subject_name"
                android:textSize="25sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:maxLines="1"
                android:background="@drawable/custom_edit_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/subject_name"
                android:inputType="textCapWords|textAutoCorrect" />

            <TextView
                android:id="@+id/subject_percentage"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/_85" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="1dp"
            android:background="#737272"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/attended_text_view"/>

               <EditText
                    android:id="@+id/classes_attended"
                    android:layout_width="40dp"
                   android:gravity="center_horizontal"
                   android:padding="4dp"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="3dp"
                   android:labelFor="@id/classes_attended"
                    android:layout_height="wrap_content"
                   android:background="@drawable/custom_edit_text"
                   android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"/>
                <EditText
                    android:id="@+id/total_classes"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:layout_width="40dp"
                    android:padding="4dp"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:labelFor="@id/total_classes"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
