<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.howaboutthis.satyaraj.skive.MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:id="@+id/percentage_layout"
    android:background="@drawable/layout_color"
    android:padding="10dp"
    android:layout_marginTop="?attr/actionBarSize">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/circle_progress_background" />

    <ProgressBar
        android:id="@+id/circle_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/circle_progress_foreground"
        android:rotation="-90"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="325dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/total_percentage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_percentage"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/_85"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/expected_percentage" />

        <TextView
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/expected_percentage"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/_85"
        />
    </LinearLayout>
</RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:background="#cbcbce"
        android:layout_marginTop="296dp"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:id="@+id/empty_view"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="Add Subjects into\nTimetable "/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:tint = "#ffff"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>
